--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-seo": "^2.0.6",
     "@strapi/plugin-users-permissions": "5.8.1",
     "@strapi/strapi": "5.8.1",
+    "medusa-plugin-strapi": "^1.0.9-dev",
     "openai": "^4.83.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
